--- a/src/pages/ru/terms/index.mdx
+++ b/src/pages/ru/terms/index.mdx
@@ -7,58 +7,95 @@ import Layout from '../../../layouts/Layout.astro'
 
 
     
-        # Условия сотрудничества
-            
 
+#  Условия сотрудничества
 
-        1. Предмет условий
-        1.1. Настоящие условия определяют порядок сотрудничества между заказчиком (далее - "Клиент") и разработчиком сайтов и телеграм-ботов (далее - "Разработчик") в рамках создания интернет-проектов и их обслуживания.
+  
+  
 
+1. **Предмет условий**
 
+- 1.1. Настоящие условия определяют порядок сотрудничества между заказчиком (далее - "Клиент") и разработчиком сайтов и телеграм-ботов (далее - "Разработчик") в рамках создания интернет-проектов и их обслуживания.
 
-        2. Цена и дополнительные затраты
-        2.1. Цена, указанная на сайте или в индивидуальном коммерческом предложении, представляет собой стоимость работ Разработчика и не включает в себя дополнительных сопутствующих затрат на запуск и обслуживание проекта.
+  
+  
+  
 
+2. **Цена и дополнительные затраты**
 
+  
 
-        3. Сроки выполнения работ
-        3.1. Сроки разработки проекта, указанные в договоре, могут быть сдвинуты по усмотрению Разработчика из-за причин непреодолимой силы или осложнений в разработке проекта. Клиент будет уведомлен о любых изменениях сроков лично.
+- 2.1. Цена, указанная на сайте или в индивидуальном коммерческом предложении, представляет собой стоимость работ Разработчика и не включает в себя дополнительных сопутствующих затрат на запуск и обслуживание проекта.
 
+  
+  
+  
 
+3. **Сроки выполнения работ**
 
-        4. Предварительный анализ проекта
-        4.1. Перед началом разработки производится анализ проекта, предложения по улучшению, обсуждение деталей проекта и его разработки.
+  
 
-        4.2. По результатам анализа и обсуждения заключается договор, в котором указываются предоставляемые Разработчиком услуги, сроки выполнения и окончательная стоимость проекта.
+- 3.1. Сроки разработки проекта, указанные в договоре, могут быть сдвинуты по усмотрению Разработчика из-за причин непреодолимой силы или осложнений в разработке проекта. Клиент будет уведомлен о любых изменениях сроков лично.
 
+  
+  
+  
 
+4. **Предварительный анализ проекта**
 
-        5. Законодательство Украины
-        5.1. Стороны обязуются соблюдать законодательство Украины в процессе выполнения всех обязательств по настоящему соглашению.
+  
 
+- 4.1. Перед началом разработки производится анализ проекта, предложения по улучшению, обсуждение деталей проекта и его разработки.
 
+  
 
-        6. Другие условия
-        6.1. Разработчик не несет ответственности за возможные убытки или ущерб, понесенные Клиентом в результате действий третьих лиц или сил природы.
+- 4.2. По результатам анализа и обсуждения заключается договор, в котором указываются предоставляемые Разработчиком услуги, сроки выполнения и окончательная стоимость проекта.
 
-        6.2. В случае возникновения споров между Сторонами, они обязуются приложить максимум усилий для разрешения спора путем переговоров.
+  
+  
+  
 
-        6.3. Изменения и дополнения к настоящим условиям сотрудничества действительны только в письменной форме и подписываются обеими Сторонами.
+5. **Законодательство Украины**
 
+- 5.1. Стороны обязуются соблюдать законодательство Украины в процессе выполнения всех обязательств по настоящему соглашению.
 
+  
+  
+  
 
-        7. Завершающие положения
-        7.1. Настоящие условия вступают в силу с момента их публикации на сайте и действуют до момента их изменения или отзыва.
+6. **Другие условия**
 
-        7.2. Настоящие условия составлены на русском языке и могут быть предоставлены Клиенту на другом языке по его запросу.
+- 6.1. Разработчик не несет ответственности за возможные убытки или ущерб, понесенные Клиентом в результате действий третьих лиц или сил природы.
 
-        7.3. В случае противоречий между настоящими условиями и договором между Сторонами, применяются условия договора.
+  
 
+- 6.2. В случае возникновения споров между Сторонами, они обязуются приложить максимум усилий для разрешения спора путем переговоров.
 
+  
 
-        Дата публикации: 01.03.2024
+- 6.3. Изменения и дополнения к настоящим условиям сотрудничества действительны только в письменной форме и подписываются обеими Сторонами.
 
-        Последнее обновление: 05.03.2024
+  
+  
+  
+
+7. **Завершающие положения**
+
+- 7.1. Настоящие условия вступают в силу с момента их публикации на сайте и действуют до момента их изменения или отзыва.
+
+  
+
+- 7.2. Настоящие условия составлены на русском языке и могут быть предоставлены Клиенту на другом языке по его запросу.
+
+  
+
+- 7.3. В случае противоречий между настоящими условиями и договором между Сторонами, применяются условия договора.
+
+  
+  
+  
+
+*Дата публикации: 01.03.2024* - *Последнее обновление: 05.03.2024*
 
 
     </div>
