--- a/src/pages/ua/terms/index.mdx
+++ b/src/pages/ua/terms/index.mdx
@@ -7,58 +7,94 @@ import Layout from '../../../layouts/Layout.astro'
 
 
     
-        # Умови співпраці
-            
+# Умови співпраці
 
+  
+  
 
-      1. Предмет умов
-      1.1 Ці умови визначають порядок співробітництва між замовником (далі - "Клієнт") і розробником сайтів і телеграм-ботів (далі - "Розробник") в рамках створення інтернет-проєктів та їх обслуговування.
+1. **Предмет умов**
 
+- 1.1. Ці умови визначають порядок співпраці між замовником (далі - "Клієнт") і розробником сайтів і телеграм-ботів (далі - "Розробник") у рамках створення інтернет-проектів та їх обслуговування.
 
+  
+  
+  
 
-      2. Ціна та додаткові витрати
-      2.1 Ціна, зазначена на сайті або в індивідуальній комерційній пропозиції, є вартістю робіт Розробника і не містить у собі додаткових супутніх витрат на запуск і обслуговування проєкту.
+2. **Ціна та додаткові витрати**
 
+  
 
+- 2.1. Ціна, зазначена на сайті або в індивідуальній комерційній пропозиції, є вартістю робіт Розробника і не містить додаткових супутніх витрат на запуск і обслуговування проєкту.
 
-      3. Терміни виконання робіт
-      3.1 Терміни розроблення проєкту, зазначені в договорі, можуть бути зсунуті на розсуд Розробника через причини непереборної сили або ускладнень у розробленні проєкту. Клієнт буде повідомлений про будь-які зміни термінів особисто.
+  
+  
+  
 
+3. **Терміни виконання робіт**
 
+  
 
-      4. Попередній аналіз проєкту
-      4.1 Перед початком розроблення проводиться аналіз проєкту, пропозиції щодо поліпшення, обговорення деталей проєкту та його розроблення.
+- 3.1. Терміни розроблення проєкту, зазначені в договорі, можуть бути зсунуті на розсуд Розробника через причини непереборної сили або ускладнень у розробленні проєкту. Клієнт буде повідомлений про будь-які зміни термінів особисто.
 
-      4.2 За результатами аналізу та обговорення укладається договір, в якому вказуються надані Розробником послуги, строки виконання та остаточна вартість проєкту.
+  
+  
+  
 
+4. **Передній аналіз проєкту**.
 
+  
 
-      5. Законодавство України
-      5.1 Сторони зобов'язуються дотримуватися законодавства України в процесі виконання всіх зобов'язань за цією угодою.
+- 4.1. Перед початком розроблення проводиться аналіз проєкту, пропозиції щодо поліпшення, обговорення деталей проєкту та його розроблення.
 
+  
 
+- 4.2. За результатами аналізу та обговорення укладається договір, у якому зазначаються надані Розробником послуги, строки виконання та остаточна вартість проєкту.
 
-      6. Інші умови
-      6.1 Розробник не несе відповідальності за можливі збитки або шкоду, яких зазнав Клієнт внаслідок дій третіх осіб або сил природи.
+  
+  
+  
 
-      6.2 У разі виникнення спорів між Сторонами, вони зобов'язуються докласти максимум зусиль для вирішення спору шляхом переговорів.
+5. **Законодавство України**
 
-      6.3 Зміни та доповнення до цих умов співробітництва є дійсними лише в письмовій формі та підписуються обома Сторонами.
+- 5.1. Сторони зобов'язуються дотримуватися законодавства України в процесі виконання всіх зобов'язань за цією угодою.
 
+  
+  
+  
 
+6. **Інші умови**
 
-      7. Завершальні положення
-      7.1 Ці умови набувають чинності з моменту їхньої публікації на сайті та діють до моменту їхньої зміни або відкликання.
+- 6.1. Розробник не несе відповідальності за можливі збитки або шкоду, яких зазнав Клієнт внаслідок дій третіх осіб або сил природи.
 
-      7.2 Ці умови складені російською мовою і можуть бути надані Клієнту іншою мовою за його запитом.
+  
 
-      7.3 У разі суперечностей між цими умовами та договором між Сторонами, застосовуються умови договору.
+- 6.2. У разі виникнення суперечок між Сторонами, вони зобов'язуються докласти максимум зусиль для вирішення спору шляхом переговорів.
 
+  
 
+- 6.3. Зміни та доповнення до цих умов співробітництва є дійсними лише в письмовій формі та підписуються обома Сторонами.
 
-      Дата публікації: 01.03.2024
+  
+  
+  
 
-      Останнє оновлення: 05.03.2024
+7. **Заключні положення**
+
+- 7.1. Ці умови набувають чинності з моменту їхньої публікації на сайті та діють до моменту їхньої зміни або відкликання.
+
+  
+
+- 7.2. Ці умови складені російською мовою і можуть бути надані Клієнту іншою мовою за його запитом.
+
+  
+
+- 7.3. У разі суперечностей між цими умовами та договором між Сторонами, застосовуються умови договору.
+
+  
+  
+  
+
+*Дата публікації: 01.03.2024* - *Останнє оновлення: 05.03.2024*
 
 
     </div>
