--- a/src/pages/ru/terms/index.mdx
+++ b/src/pages/ru/terms/index.mdx
@@ -2,7 +2,7 @@ import Layout from '../../../layouts/Layout.astro'
 
 <Layout title='Terms'>
 
-    <div class="mx-auto w-full max-w-[800px] my-[80px] prose lg:prose-xl">
+    <div class="mx-auto w-full max-w-[800px] my-[80px] prose lg:prose-xl p-5">
 
 
 
