--- a/src/pages/ua/terms/index.mdx
+++ b/src/pages/ua/terms/index.mdx
@@ -4,97 +4,45 @@ import Layout from '../../../layouts/Layout.astro'
 
     <div class="mx-auto w-full max-w-[800px] my-[80px] prose lg:prose-xl p-5">
 
-
-
-    
 # Умови співпраці
 
-  
-  
+## 1. Предмет умов
 
-1. **Предмет умов**
+- 1.1. Ці умови визначають порядок співпраці між замовником (надалі - "Клієнт") та розробником сайтів і телеграм-ботів (надалі - "Розробник") у рамках створення інтернет-проектів та їх обслуговування.
 
-- 1.1. Ці умови визначають порядок співпраці між замовником (далі - "Клієнт") і розробником сайтів і телеграм-ботів (далі - "Розробник") у рамках створення інтернет-проектів та їх обслуговування.
+## 2. Ціна та додаткові витрати
 
-  
-  
-  
+- 2.1. Ціна, зазначена на сайті або в індивідуальній комерційній пропозиції, є вартістю робіт Розробника і не містить додаткових супутніх витрат на запуск та обслуговування проєкту.
 
-2. **Ціна та додаткові витрати**
-
-  
-
-- 2.1. Ціна, зазначена на сайті або в індивідуальній комерційній пропозиції, є вартістю робіт Розробника і не містить додаткових супутніх витрат на запуск і обслуговування проєкту.
-
-  
-  
-  
-
-3. **Терміни виконання робіт**
-
-  
+## 3. Терміни виконання робіт
 
 - 3.1. Терміни розроблення проєкту, зазначені в договорі, можуть бути зсунуті на розсуд Розробника через причини непереборної сили або ускладнень у розробленні проєкту. Клієнт буде повідомлений про будь-які зміни термінів особисто.
 
-  
-  
-  
 
-4. **Передній аналіз проєкту**.
-
-  
+## 4. Попередній аналіз проєкту
 
 - 4.1. Перед початком розроблення проводиться аналіз проєкту, пропозиції щодо поліпшення, обговорення деталей проєкту та його розроблення.
+- 4.2. За результатами аналізу та обговорення укладається договір, у якому зазначаються послуги, що надаються Розробником, строки виконання та остаточна вартість проєкту.
 
-  
+## 5. Умови оплати
 
-- 4.2. За результатами аналізу та обговорення укладається договір, у якому зазначаються надані Розробником послуги, строки виконання та остаточна вартість проєкту.
+- 5.1. Для початку роботи Клієнт оплачує 50% від загальної вартості проєкту як завдаток перед початком розробки. Решта 50% оплачуються після готовності проєкту до запуску.
+- 5.2. У разі, якщо Клієнт замовляє послугу у Розробника вперше, йому надається 2 тижні безкоштовного обслуговування сайту після його запуску. Після цього обслуговування може бути продовжено на умовах, обумовлених окремо.
 
-  
-  
-  
+## 6. Інші умови
 
-5. **Законодавство України**
+- 6.1. Розробник має право на захист своїх прав та інтересів у рамках співпраці з Клієнтом. У разі виникнення спорів або невідповідностей між сторонами, розробник має право на адекватний захист своїх інтересів відповідно до чинного законодавства.
+- 6.2. Клієнт зобов'язується надати розробнику всі необхідні матеріали та інформацію, необхідну для виконання проєкту, у встановлені терміни. Затримка в наданні інформації з боку Клієнта може призвести до затримок у виконанні проєкту, за винятком випадків форс-мажорних обставин.
+- 6.3. За умовами оплати, Клієнт зобов'язується сплатити 50% від загальної вартості проєкту як завдаток перед початком розробки. Якщо Клієнт відмовляється від проєкту з будь-якої причини протягом 3 днів після початку розробки, завдаток не повертається розробнику.
+- 6.4. Розробник залишає за собою право на використання проекту в портфоліо і для рекламних цілей після його завершення, за винятком випадків, коли це прямо суперечить умовам конфіденційності, обумовленим між сторонами.
 
-- 5.1. Сторони зобов'язуються дотримуватися законодавства України в процесі виконання всіх зобов'язань за цією угодою.
-
-  
-  
-  
-
-6. **Інші умови**
-
-- 6.1. Розробник не несе відповідальності за можливі збитки або шкоду, яких зазнав Клієнт внаслідок дій третіх осіб або сил природи.
-
-  
-
-- 6.2. У разі виникнення суперечок між Сторонами, вони зобов'язуються докласти максимум зусиль для вирішення спору шляхом переговорів.
-
-  
-
-- 6.3. Зміни та доповнення до цих умов співробітництва є дійсними лише в письмовій формі та підписуються обома Сторонами.
-
-  
-  
-  
-
-7. **Заключні положення**
+## 7. Завершальні положення
 
 - 7.1. Ці умови набувають чинності з моменту їхньої публікації на сайті та діють до моменту їхньої зміни або відкликання.
-
-  
-
-- 7.2. Ці умови складені російською мовою і можуть бути надані Клієнту іншою мовою за його запитом.
-
-  
-
+- 7.2. Ці умови складені Англійською, Українською та Російською мовою і можуть бути надані Клієнту іншою мовою за його запитом.
 - 7.3. У разі суперечностей між цими умовами та договором між Сторонами, застосовуються умови договору.
 
-  
-  
-  
-
-*Дата публікації: 01.03.2024* - *Останнє оновлення: 05.03.2024*
+*Дата публікації: 01.03.2024* - *Останнє оновлення: 08.04.2024*
 
 
     </div>
