--- a/src/pages/en/terms/index.mdx
+++ b/src/pages/en/terms/index.mdx
@@ -1,101 +1,47 @@
 import Layout from '../../../layouts/Layout.astro'
 
-<Layout title='Terms'>
+<Layout title='Terms of cooperation'>
 
     <div class="mx-auto w-full max-w-[800px] my-[80px] prose lg:prose-xl p-5">
 
+## Terms of cooperation
 
+## 1. Subject of conditions
 
-    
+- 1.1. These terms and conditions define the order of cooperation between the customer (hereinafter - "Client") and the developer of websites and Telegram bots (hereinafter - "Developer") in the framework of creation of Internet projects and their maintenance.
 
-# Terms of cooperation
+## 2. Price and additional costs
 
-  
-  
+- 2.1. The price specified on the website or in an individual commercial offer is the cost of the Developer's work and does not include additional associated costs for the launch and maintenance of the project.
 
-1. **Terms of conditions**
+## 3. Terms of work fulfillment
 
-- 1.1. These terms and conditions define the procedure of cooperation between the customer (hereinafter - "Client") and the developer of websites and telegram bots (hereinafter - "Developer") within the framework of creation of Internet projects and their maintenance.
+- 3.1. The project development timeline specified in the contract may be shifted at Developer's discretion due to force majeure reasons or complications in project development. The Client will be notified of any changes to the timeline in person.
 
-  
-  
-  
+## 4. Preliminary Project Analysis
 
-2. **Price and additional costs**
+- 4.1. Prior to commencement of development, the project shall be analyzed, suggestions for improvement shall be made, and the details of the project and its development shall be discussed.
+- 4.2. Based on the results of the analysis and discussion, a contract is concluded, which specifies the services to be provided by the Developer, the deadlines and the final cost of the project.
 
-  
+## 5. Terms of payment
 
-- 2.1. The price specified on the website or in the individual commercial offer represents the cost of the Developer's work and does not include additional associated costs for the launch and maintenance of the project.
+- 5.1. To start work, the Client pays 50% of the total project cost as a deposit before the start of development. The remaining 50% is paid after the project is ready for launch.
+- 5.2. In case the Client orders the service from the Developer for the first time, he/she is given 2 weeks of free maintenance of the website after its launch. After that the service can be extended on the terms and conditions agreed upon separately.
 
-  
-  
-  
+## 6. Other conditions
 
-3. **Timeframes of Work Performance**
+- 6.1. The Developer shall be entitled to protect its rights and interests in the framework of cooperation with the Client. In case of disputes or inconsistencies between the parties, the Developer shall be entitled to adequate protection of its interests in accordance with applicable law.
+- 6.2. The Client undertakes to provide the developer with all necessary materials and information required for the project within the established deadlines. Delay in providing information from the Client's side may result in delays in project fulfillment, except in cases of force majeure.
+- 6.3. Under the payment terms, the Client agrees to pay 50% of the total cost of the project as a deposit prior to commencement of development. If the Client cancels the project for any reason within 3 days after the start of development, the deposit will not be returned to the developer.
+- 6.4. The Developer reserves the right to use the project for portfolio and promotional purposes after its completion, unless it directly contradicts the confidentiality terms agreed between the parties.
 
-  
+## 7. Final provisions
 
-- 3.1. The project development timeline specified in the contract may be shifted at Developer's discretion due to force majeure reasons or complications in project development. Client will be notified of any changes to the timeline in person.
-
-  
-  
-  
-
-4. **Preliminary Project Analysis**
-
-  
-
-- 4.1. Prior to commencement of development, the project shall be analyzed, suggestions for improvement, discussion of project details and development.
-
-  
-
-- 4.2. Based on the results of the analysis and discussion, a contract is concluded, which specifies the services to be provided by the Developer, the terms of execution and the final cost of the project.
-
-  
-  
-  
-
-5. **Laws of Ukraine**
-
-- 5.1. The Parties undertake to comply with the legislation of Ukraine in the process of fulfillment of all obligations under this Agreement.
-
-  
-  
-  
-
-6. **Other Terms**
-
-- 6.1. The Developer shall not be liable for any possible loss or damage incurred by the Client as a result of actions of third parties or forces of nature.
-
-  
-
-- 6.2. In case of disputes between the Parties, they undertake to use their best efforts to resolve the dispute through negotiations.
-
-  
-
-- 6.3. Amendments and additions to these terms of cooperation shall be valid only in writing and signed by both Parties.
-
-  
-  
-  
-
-7. **Final Clauses**
-
-- 7.1. These terms and conditions come into effect from the moment of their publication on the website and shall remain in force until they are amended or withdrawn.
-
-  
-
-- 7.2. These terms and conditions are drawn up in Russian and may be provided to the Client in another language upon request.
-
-  
-
+- 7.1. These terms and conditions shall be effective from the date of their publication on the website and shall remain in force until amended or withdrawn.
+- 7.2. These terms and conditions are drawn up in English, Ukrainian and Russian and can be provided to the Client in another language upon request.
 - 7.3. In case of contradictions between these terms and conditions and the contract between the Parties, the terms and conditions of the contract shall apply.
 
-  
-  
-  
-
-*Publication date: 01.03.2024* - *Last updated: 05.03.2024*
+*Publication date: 01.03.2024* - *Last update: 08.04.2024*
 
 
     </div>
