--- a/src/pages/ru/terms/index.mdx
+++ b/src/pages/ru/terms/index.mdx
@@ -1,101 +1,48 @@
 import Layout from '../../../layouts/Layout.astro'
 
-<Layout title='Terms'>
+<Layout title='Условия сотрудничества'>
 
     <div class="mx-auto w-full max-w-[800px] my-[80px] prose lg:prose-xl p-5">
 
 
+# Условия сотрудничества
 
-    
-
-#  Условия сотрудничества
-
-  
-  
-
-1. **Предмет условий**
+## 1. Предмет условий
 
 - 1.1. Настоящие условия определяют порядок сотрудничества между заказчиком (далее - "Клиент") и разработчиком сайтов и телеграм-ботов (далее - "Разработчик") в рамках создания интернет-проектов и их обслуживания.
 
-  
-  
-  
-
-2. **Цена и дополнительные затраты**
-
-  
+## 2. Цена и дополнительные затраты
 
 - 2.1. Цена, указанная на сайте или в индивидуальном коммерческом предложении, представляет собой стоимость работ Разработчика и не включает в себя дополнительных сопутствующих затрат на запуск и обслуживание проекта.
 
-  
-  
-  
-
-3. **Сроки выполнения работ**
-
-  
+## 3. Сроки выполнения работ
 
 - 3.1. Сроки разработки проекта, указанные в договоре, могут быть сдвинуты по усмотрению Разработчика из-за причин непреодолимой силы или осложнений в разработке проекта. Клиент будет уведомлен о любых изменениях сроков лично.
 
-  
-  
-  
-
-4. **Предварительный анализ проекта**
-
-  
+## 4. Предварительный анализ проекта
 
 - 4.1. Перед началом разработки производится анализ проекта, предложения по улучшению, обсуждение деталей проекта и его разработки.
-
-  
-
 - 4.2. По результатам анализа и обсуждения заключается договор, в котором указываются предоставляемые Разработчиком услуги, сроки выполнения и окончательная стоимость проекта.
 
-  
-  
-  
+## 5. Условия оплаты
 
-5. **Законодательство Украины**
+- 5.1. Для начала работы Клиент оплачивает 50% от общей стоимости проекта в качестве задатка перед началом разработки. Оставшиеся 50% оплачиваются после готовности проекта к запуску.
+- 5.2. В случае, если Клиент заказывает услугу у Разработчика впервые, ему предоставляется 2 недели бесплатного обслуживания сайта после его запуска. После этого обслуживание может быть продлено на условиях, оговоренных отдельно.
 
-- 5.1. Стороны обязуются соблюдать законодательство Украины в процессе выполнения всех обязательств по настоящему соглашению.
+## 6. Другие условия
 
-  
-  
-  
+- 6.1. Разработчик имеет право на защиту своих прав и интересов в рамках сотрудничества с Клиентом. В случае возникновения споров или несоответствий между сторонами, разработчик имеет право на адекватную защиту своих интересов в соответствии с действующим законодательством.
+- 6.2. Клиент обязуется предоставить разработчику все необходимые материалы и информацию, необходимую для выполнения проекта, в установленные сроки. Задержка в предоставлении информации со стороны Клиента может привести к задержкам в выполнении проекта, за исключением случаев форс-мажорных обстоятельств.
+- 6.3. По условиям оплаты, Клиент обязуется оплатить 50% от общей стоимости проекта в качестве задатка перед началом разработки. Если Клиент отказывается от проекта по какой-либо причине в течение 3 дней после начала разработки, задаток не возвращается разработчику.
+- 6.4. Разработчик оставляет за собой право на использование проекта в портфолио и для рекламных целей после его завершения, за исключением случаев, когда это прямо противоречит условиям конфиденциальности, оговоренным между сторонами.
 
-6. **Другие условия**
-
-- 6.1. Разработчик не несет ответственности за возможные убытки или ущерб, понесенные Клиентом в результате действий третьих лиц или сил природы.
-
-  
-
-- 6.2. В случае возникновения споров между Сторонами, они обязуются приложить максимум усилий для разрешения спора путем переговоров.
-
-  
-
-- 6.3. Изменения и дополнения к настоящим условиям сотрудничества действительны только в письменной форме и подписываются обеими Сторонами.
-
-  
-  
-  
-
-7. **Завершающие положения**
+## 7. Завершающие положения
 
 - 7.1. Настоящие условия вступают в силу с момента их публикации на сайте и действуют до момента их изменения или отзыва.
-
-  
-
-- 7.2. Настоящие условия составлены на русском языке и могут быть предоставлены Клиенту на другом языке по его запросу.
-
-  
-
+- 7.2. Настоящие условия составлены на Английском, Украинском и Русском языке и могут быть предоставлены Клиенту на другом языке по его запросу.
 - 7.3. В случае противоречий между настоящими условиями и договором между Сторонами, применяются условия договора.
 
-  
-  
-  
-
-*Дата публикации: 01.03.2024* - *Последнее обновление: 05.03.2024*
+*Дата публикации: 01.03.2024* - *Последнее обновление: 08.04.2024*
 
 
     </div>
